--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
+    "classnames": "^2.5.1",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16",
     "vue": "^3.5.22",
